# android_jni_filter

./: build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/vcoolish/metafilter/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CLogReader.cpp  CLogReader.h
app/src/main/java/com/vcoolish/metafilter/: MainActivity.java  TextItemsRecyclerAdapter.java
app/src/main/res/layout/: activity_main.xml  item_text_line.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/test/java/com/vcoolish/metafilter/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
